--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,9 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Checking file: #{file}
+  h2 Relation: #{dataset.name}
+  h3 Attributes
+  ul
+    each attribute in dataset.attributes
+     li #{attribute}: #{JSON.stringify(dataset.types[attribute])}
