--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,10 @@ body {
 a {
   color: #00B7FF;
 }
+
+tbody > tr:first-child > td > .arrow-up {
+  display: none!important;
+}
+tbody > tr:last-child > td > .arrow-down {
+  display: none!important;
+}
